fix overflow

--- a/src/component/Props.css
+++ b/src/component/Props.css
@@ -20,6 +20,7 @@
 }
 
 .section__container {
+  overflow: hidden;
   max-width: var(--max-width);
   margin: auto;
   padding: 1rem 1rem;
